--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -13,22 +13,40 @@
     }
 }
 
-//海信官网
 @mixin foolsyle {
     padding-top: 60px;
     h3 {
         font-size: 28px;
+        padding-bottom: 30px;
     }
     ;
 }
 
+@mixin hoversyle($boxWidth:100%, $boxHeight:481px) {
+    width: $boxWidth;
+    height: $boxHeight;
+    overflow: hidden;
+    img {
+        transition: all 1s;
+    }
+    img:hover {
+        transform: scale(1.1);
+    }
+}
+
+@mixin ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+//海信官网
 .fool-1 {
     @include foolsyle();
     section {
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding-top: 30px;
         div {
             img {
                 width: 100%;
@@ -66,15 +84,62 @@
 .fool-2 {
     @include foolsyle();
     div {
-        margin-top: 30px;
+        @include hoversyle();
+    }
+}
+
+.fool-3 {
+    @include foolsyle();
+    .pic {
+        display: flex;
         width: 100%;
-        height: 481px;
-        overflow: hidden;
-        img {
-            transition: all 1s;
+        height: 600px;
+        .pic1 {
+            background: greenyellow;
+            @include hoversyle(593px, 100%);
+            img {
+                height: 100%;
+                width: 593px;
+            }
         }
-        img:hover {
-            transform: scale(1.1);
+        .pic2 {
+            div {
+                @include hoversyle(593px, 300px);
+            }
+            img {
+                height: 300px
+            }
+        }
+    }
+    ul {
+        display: flex;
+        margin-top: 30px;
+        justify-content: space-between;
+        li {
+            background: #fff;
+            width: 272px;
+            padding: 8px;
+            // box-sizing: border-box;
+            a {
+                color: #000;
+                text-align: center;
+                line-height: 20px;
+            }
+            img {
+                height: 272px;
+                width: 272px;
+            }
+            h5 {
+                font-size: 14px;
+                @include ellipsis()
+            }
+            .item {
+                color: #cccccc;
+                line-height: 24px;
+            }
+            .price {
+                color: #cc0010;
+            }
         }
     }
 }
