--- a/src/css/index.css
+++ b/src/css/index.css
@@ -200,6 +200,7 @@ header {
 .nav .downland_li .downland {
   width: 124px;
   height: 142px;
+  background: #ffffff;
   position: absolute;
   top: 36px;
   left: 50%;
@@ -291,14 +292,89 @@ header {
 }
 
 .nav2 .search {
-  float: right;
+  vertical-align: middle;
   height: 64px;
   line-height: 64px;
+  position: relative;
+  float: right;
 }
-.nav2 .search span {
-  vertical-align: top;
+.nav2 .search .icon1 {
+  margin-right: 50px;
   font-size: 30px;
   font-weight: 1300px;
+}
+.nav2 .search .searchF {
+  position: absolute;
+  top: 0;
+  right: 0;
+  float: left;
+  display: flex;
+  padding: 12px 0;
+}
+.nav2 .search .searchF ol {
+  position: absolute;
+  background: #ffffff;
+  top: 50px;
+  left: 30px;
+  z-index: 99;
+}
+.nav2 .search .searchF ol li {
+  width: 933px;
+  padding: 16px 24px;
+}
+.nav2 .search .searchF input {
+  width: 0px;
+  height: 40px;
+  padding: 7px 10px;
+  border: 0px;
+}
+.nav2 .search .searchF button {
+  width: 16px;
+  border: 0px;
+  background: #ffffff;
+  display: none;
+}
+.nav2 .search .searchF .icon2 {
+  font-size: 30px;
+  font-weight: 1300px;
+  display: none;
+}
+
+footer {
+  margin-top: 30px;
+  background: #ffffff;
+  height: 410px;
+  padding: 20px 0 30px;
+}
+footer .imgContent {
+  display: flex;
+  height: 136px;
+}
+footer .imgContent img {
+  width: 296.99px;
+}
+footer .textContent {
+  display: flex;
+  justify-content: space-between;
+  line-height: 30px;
+  font-size: 14px;
+  color: #777777;
+}
+footer .textContent div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer .textContent div p {
+  font-size: 24px;
+  color: #00aaa6;
+}
+footer .textContent div span {
+  font-size: 14px;
+  color: #777777;
+}
+footer .textContent div img {
+  height: 100px;
 }
 
 .banner {
@@ -309,6 +385,9 @@ header {
 }
 .banner ul li {
   opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .banner ol {
   position: absolute;
