--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -7,6 +7,9 @@
     ul {
         li {
             opacity: 0;
+            position: absolute;
+            left: 0;
+            top: 0;
         }
     }
     ol {
