--- a/src/sass/top.scss
+++ b/src/sass/top.scss
@@ -66,6 +66,7 @@ header {
             }
             width:124px;
             height:142px;
+            background: #ffffff;
             @include twoshow();
             text-align: center;
             img {
@@ -144,13 +145,91 @@ header {
     }
 }
 
-.nav2 .search {
-    float: right;
-    height: 64px;
-    line-height: 64px;
-    span {
-        vertical-align: top;
-        font-size: 30px;
-        font-weight: 1300px;
+.nav2 {
+    .search {
+        vertical-align: middle;
+        height: 64px;
+        line-height: 64px;
+        position: relative;
+        float: right;
+        .icon1 {
+            margin-right: 50px;
+            font-size: 30px;
+            font-weight: 1300px;
+        }
+        .searchF {
+            position: absolute;
+            top: 0;
+            right: 0;
+            float: left;
+            display: flex;
+            padding: 12px 0;
+            ol {
+                position: absolute;
+                background: #ffffff;
+                top: 50px;
+                left: 30px;
+                z-index: 99;
+                li {
+                    width: 933px;
+                    padding: 16px 24px;
+                }
+            }
+            input {
+                width: 0px;
+                height: 40px;
+                padding: 7px 10px;
+                border: 0px;
+            }
+            button {
+                width: 16px;
+                border: 0px;
+                background: #ffffff;
+                display: none
+            }
+            .icon2 {
+                font-size: 30px;
+                font-weight: 1300px;
+                display: none;
+            }
+        }
+    }
+}
+
+// 底部
+footer {
+    margin-top: 30px;
+    background: #ffffff;
+    height: 410px;
+    padding: 20px 0 30px;
+    .imgContent {
+        display: flex;
+        height: 136px;
+        img {
+            width: 296.99px;
+        }
+    }
+    .textContent {
+        display: flex;
+        justify-content: space-between;
+        line-height: 30px;
+        font-size: 14px;
+        color: #777777;
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            p {
+                font-size: 24px;
+                color: #00aaa6;
+            }
+            span {
+                font-size: 14px;
+                color: #777777;
+            }
+            img {
+                height: 100px;
+            }
+        }
     }
 }
