--- a/src/sass/top.scss
+++ b/src/sass/top.scss
@@ -17,6 +17,13 @@ header {
     position: relative;
 }
 
+.move_nav2 {
+    position: fixed;
+    top: -75px;
+    background: #ffffff;
+    z-index: 1000000;
+}
+
 .nav {
     background: #000000;
     font-size: 12px;
@@ -192,6 +199,29 @@ header {
                 font-weight: 1300px;
                 display: none;
             }
+        }
+    }
+}
+
+// 侧边栏
+.right-nav {
+    position: fixed;
+    right: 0;
+    background: #ffffff;
+    z-index: 99;
+    padding: 0 7px;
+    text-align: center;
+    li {
+        border-bottom: 1px solid #eee;
+        height: 64px;
+        width: 50px;
+        padding: 10px 0;
+        box-sizing: border-box;
+        span {
+            font-size: 24px
+        }
+        p {
+            font-size: 8px;
         }
     }
 }
