--- a/src/css/top.css
+++ b/src/css/top.css
@@ -83,6 +83,13 @@ header {
   position: relative;
 }
 
+.move_nav2 {
+  position: fixed;
+  top: -75px;
+  background: #ffffff;
+  z-index: 1000000;
+}
+
 .nav {
   background: #000000;
   font-size: 12px;
@@ -260,6 +267,28 @@ header {
   font-size: 30px;
   font-weight: 1300px;
   display: none;
+}
+
+.right-nav {
+  position: fixed;
+  right: 0;
+  background: #ffffff;
+  z-index: 99;
+  padding: 0 7px;
+  text-align: center;
+}
+.right-nav li {
+  border-bottom: 1px solid #eee;
+  height: 64px;
+  width: 50px;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+.right-nav li span {
+  font-size: 24px;
+}
+.right-nav li p {
+  font-size: 8px;
 }
 
 footer {
